2008-12-21  Jim Evins  <evins@snaught.com>

	* src/view.c: (motion_notify_event_cb), (button_press_event_cb):
		Don't check for handles on aggregate selections.

2008-12-18  Jim Evins  <evins@snaught.com>

	* src/view.c: (selection_received_cb):
		Fixed paste bug that caused a duplicate phantom view_object to be created for
		each new label_object.  This is because the view now (as of r673) the view
		monitiors the label for new objects and creates view_objects automatically.

2008-12-14  Jim Evins  <evins@snaught.com>

	* po/POTFILES.in:
		Bug #2395628.  Reconciled POTFILES.in with current files.

2008-12-14  Jim Evins  <evins@snaught.com>

	* src/ui.c: (gl_ui_new):
		Bug #2395628.  Fixed i18n for application shell.
	
2008-12-14  Jim Evins  <evins@snaught.com>

	* configure.in:
		Bug #2316013.  Added PKG_PROG_PKG_CONFIG.
	
2008-11-15  Jim Evins  <evins@snaught.com>

	* libglabels/db.c: (lgl_db_register_template):
	* libglabels/xml-template.c:
	(lgl_xml_template_parse_template_node):
	* src/glabels-batch.c:
	* src/view-text.c: (gl_view_text_create_button_press_event):
		Fixed several issues such as possible use of uninitialized variables found with "-O1 -Wall".

2008-11-09  Jim Evins  <evins@snaught.com>

	* data/templates/misc-iso-templates.xml:
		Another user submitted template.

2008-10-27  Jim Evins  <evins@snaught.com>

	* data/templates/avery-us-templates.xml:
	* data/templates/misc-iso-templates.xml:
	* data/templates/zweckform-iso-templates.xml:
		Caught up on user submitted templates.
	* AUTHORS:
		Acknowledgements for above templates.

2008-10-23  Jim Evins  <evins@snaught.com>

	* src/label-text.c: (set_font_family):
	* src/object-editor-text-page.c:
	(gl_object_editor_prepare_text_page),
	(gl_object_editor_set_font_family):
	* src/prefs-dialog.c: (construct_object_page),
	(update_object_page_from_prefs):
	* src/ui-property-bar.c: (gl_ui_property_bar_construct),
	(reset_to_default_properties):
	* src/util.c: (gl_util_get_font_family_list):
	* src/util.h: